Add multiple images to phone

--- a/source/sass/index.scss
+++ b/source/sass/index.scss
@@ -1,6 +1,5 @@
 @use 'base';
+@use 'layout';
+@use 'helpers';
+@use 'components';
 
-body {
-    font-size: 5em;
-    background-color: base.$red;
-}
