Add base login html

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,23 @@
 .main-left img {
-  width: 31.5%;
+  width: 80%;
   background-image: url(/public/img/login-a.jpg);
   background-repeat: no-repeat;
   background-position-x: 50%;
   background-position-y: 50%;
+  background-size: 80%;
+}
+
+.main-right .login-logo {
+  width: 30%;
+  background-color: white;
+}
+.main-right .login-or {
+  display: flex;
+}
+
+main {
+  display: flex;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=index.css.map */
