--- a/source/sass/base/_colors.scss
+++ b/source/sass/base/_colors.scss
@@ -1,6 +1,7 @@
 $blue: #0095F6;
-$lightBlue: #B2DFFC;
-$extraLightBlue: #E8F0FE;
+$facebook-blue: #385185;
+$light-blue: #B2DFFC;
+$extra-light-blue: #E8F0FE;
 
 $gray: #8E8E8E;
-$lightGray: #DBDBDB;
+$light-gray: #DBDBDB;
