--- a/source/sass/base/_reset.scss
+++ b/source/sass/base/_reset.scss
@@ -7,6 +7,10 @@
     -webkit-font-smoothing: antialiased;
 }
 
+html {
+    height: 100%;
+}
+
 input {
     -webkit-appearance: none;
     border-radius: 0;
