--- a/source/sass/base/_reset.scss
+++ b/source/sass/base/_reset.scss
@@ -11,6 +11,11 @@ html {
     height: 100%;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 input {
     -webkit-appearance: none;
     border-radius: 0;
