Add control area on post

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -212,4 +212,72 @@ nav .nav-control img:last-child {
   border-radius: 50%;
 }
 
+.post {
+  margin: 7rem auto;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #8E8E8E;
+  border-radius: 5px;
+}
+.post .post-nav {
+  padding: 0.8rem 1rem;
+  display: flex;
+  align-items: middle;
+  border-bottom: 1px solid #8E8E8E;
+}
+.post .post-nav img {
+  border-radius: 50%;
+  height: 2.5rem;
+}
+.post .post-nav .nav-user {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  margin: 0 1rem;
+}
+.post .post-nav .nav-user a {
+  font-size: 0.9rem;
+}
+.post .post-nav .nav-user a:first-child {
+  font-weight: 600;
+  letter-spacing: 0.03rem;
+}
+.post .post-nav .nav-user a:last-child {
+  font-weight: 300;
+  font-size: smaller;
+}
+.post .post-nav .post-config {
+  margin-left: auto;
+  font-size: 1.5rem;
+}
+.post .post-image img {
+  width: 100%;
+}
+.post .post-actions .post-actions__control {
+  display: flex;
+}
+.post .post-actions .post-actions__control img {
+  height: 1.7rem;
+  margin: 0.5rem;
+}
+.post .post-actions .post-actions__control img:last-child {
+  margin-left: auto;
+}
+.post .post-likes {
+  padding: 0.5rem 1rem;
+  display: flex;
+}
+.post .post-likes img {
+  height: 1.4rem;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+.post .post-likes p {
+  align-self: center;
+  font-size: 0.95rem;
+}
+.post .post-likes p span {
+  font-weight: 600;
+}
+
 /*# sourceMappingURL=index.css.map */
